syntax = "proto3";

package proto;

option go_package = "github.com/Tien197/Mandatory-Handin-4-Distributed-Mutual-Exclusion/proto";
// when changing the file
/*
protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/proto.proto
 */

message NodeMessage {
  int64 id = 1;
  int64 port = 2;
  int64 timestamp = 3;
  string message = 4;
  bool permission = 5;
}

service Node {
  rpc RequestToEnterSection(NodeMessage) returns (NodeMessage);
  rpc EnterSection(NodeMessage) returns (NodeMessage);
  rpc LeaveSection(NodeMessage) returns (NodeMessage);
}


